--- a/templates/index.html
+++ b/templates/index.html
@@ -39,7 +39,8 @@
   <link rel="stylesheet" href="{% static 'css/sections/skills.css' %}">
   <link rel="stylesheet" href="{% static 'css/sections/achievements.css' %}">
   <link rel="stylesheet" href="{% static 'css/sections/projects.css' %}">
-  <link rel="stylesheet" href="{% static 'css/sections/contact.css' %}">  <link rel="stylesheet" href="{% static 'css/sections/footer.css' %}">
+  <link rel="stylesheet" href="{% static 'css/sections/contact.css' %}">
+  <link rel="stylesheet" href="{% static 'css/sections/footer.css' %}">
 </head>
 
 <body>
@@ -74,7 +75,7 @@
 {% include 'sections/footer.html' %}
 
 <!-- Main JavaScript -->
-<script src="{% static 'js/main.js' %}"></script>
+<script src="{% static 'script.js' %}"></script>
 <script src="{% static 'js/sections/header.js' %}"></script>
 <script src="{% static 'js/sections/home.js' %}"></script>
 <script src="{% static 'js/sections/about.js' %}"></script>
