--- a/templates/sections/home.html
+++ b/templates/sections/home.html
@@ -7,7 +7,7 @@
       <div class="hero-content">
         <div class="hero-badge">
           <i class="fas fa-rocket"></i>
-          <span>Available for exciting projects</span>
+          <span>Software Engineer with 4 years of Experience</span>
         </div>
         
         <h1>
