--- a/templates/sections/header.html
+++ b/templates/sections/header.html
@@ -14,12 +14,13 @@
     <a class="nav-item" href="#experience">Experience</a>
     <a class="nav-item" href="#skills">Skills</a>
     <a class="nav-item" href="#achievements">Achievements</a>
+    <a class="nav-item" href="#certificate">Certificate</a>
     <a class="nav-item" href="#projects">Projects</a>
     <a class="nav-item" href="#contact">Contact</a>
     <a class="nav-item" href="https://github.com/W-Mirshod" target="_blank">GitHub</a>
   </nav>
 
-  <div class="mobile-menu-toggle">
+  <div class="menu-toggle" role="button" tabindex="0" aria-expanded="false" aria-controls="mobileNavMenu" aria-label="Toggle navigation menu">
     <span></span>
     <span></span>
     <span></span>
@@ -27,11 +28,13 @@
 </header>
 
 <!-- Mobile Navigation -->
-<nav class="nav-mobile">
+<nav class="nav-mobile" id="mobileNavMenu">
   <a class="nav-item" href="#home">Home</a>
   <a class="nav-item" href="#about">About</a>
+  <a class="nav-item" href="#experience">Experience</a>
   <a class="nav-item" href="#skills">Skills</a>
   <a class="nav-item" href="#achievements">Achievements</a>
+  <a class="nav-item" href="#certificate">Certificate</a>
   <a class="nav-item" href="#projects">Projects</a>
   <a class="nav-item" href="#contact">Contact</a>
   <a class="nav-item" href="https://github.com/W-Mirshod" target="_blank">GitHub</a>
