--- a/templates/index.html
+++ b/templates/index.html
@@ -37,7 +37,8 @@
   <link rel="stylesheet" href="{% static 'css/sections/about.css' %}">
   <link rel="stylesheet" href="{% static 'css/sections/experience.css' %}">
   <link rel="stylesheet" href="{% static 'css/sections/skills.css' %}">
-  <link rel="stylesheet" href="{% static 'css/sections/achievements.css' %}">
+ <link rel="stylesheet" href="{% static 'css/sections/achievements.css' %}">
+  <link rel="stylesheet" href="{% static 'css/sections/certificate.css' %}">
   <link rel="stylesheet" href="{% static 'css/sections/projects.css' %}">
   <link rel="stylesheet" href="{% static 'css/sections/contact.css' %}">
   <link rel="stylesheet" href="{% static 'css/sections/footer.css' %}">
@@ -65,6 +66,9 @@
 <!-- Achievements Section -->
 {% include 'sections/achievements.html' %}
 
+<!-- Certificate Section -->
+{% include 'sections/certificate.html' %}
+
 <!-- Projects Section -->
 {% include 'sections/projects.html' %}
 
@@ -82,6 +86,7 @@
 <script src="{% static 'js/sections/experience.js' %}"></script>
 <script src="{% static 'js/sections/skills.js' %}"></script>
 <script src="{% static 'js/sections/achievements.js' %}"></script>
+<script src="{% static 'js/sections/certificate.js' %}"></script>
 <script src="{% static 'js/sections/projects.js' %}"></script>
 <script src="{% static 'js/sections/contact.js' %}"></script>
 <script src="{% static 'js/sections/footer.js' %}"></script>
