--- a/templates/sections/footer.html
+++ b/templates/sections/footer.html
@@ -13,6 +13,7 @@
           <li><a href="#experience" class="footer-link">Experience</a></li>
           <li><a href="#skills" class="footer-link">Skills</a></li>
           <li><a href="#achievements" class="footer-link">Achievements</a></li>
+          <li><a href="#certificate" class="footer-link">Certificate</a></li>
           <li><a href="#projects" class="footer-link">Projects</a></li>
           <li><a href="#contact" class="footer-link">Contact</a></li>
         </ul>
